# CServe

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: cluster.example.yaml  cluster.yaml  models.example.yaml  models.yaml
cserve/: __init__.py
cserve/cli/: ctl.py
cserve/common/: auth.py  config.py  config_secrets.py  config_sync.py  demand.py  logging.py  metrics.py  models.py  rate_limit.py  registry.py  server.py  ui_tuning.py
cserve/control_plane/: autoscaler.py  db.py  deployment_precedence.py  gateway.py  gpu_guard.py  grpc_client.py  health.py  metrics_collector.py  node_client.py  orchestrator.py  placement.py  queue.py  scheduler.py  ssh_manager.py
cserve/dashboard/: api.py
cserve/node_agent/: agent.py  gpu_monitor.py  grpc_server.py  (+3 more)
dashboard-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
proto/: node_agent.proto
scripts/: HEAD-SERVICES.md  bootstrap-cluster.sh  create_admin_key.py  cserve-agent.service  cserve-control.service  deploy-agents.sh  export_ui_tuning_to_yaml.py  gemma4_load_monitor.py  keep_gpt_oss_warm.py  migrate-head-to-services.sh  run-control-plane-services.sh  run-control-plane.sh  sync-cserve-to-services.sh
tests/: test_auth.py  test_autoscaler.py  test_config.py  test_config_secrets.py  test_config_sync.py  test_dashboard.py  test_db.py  test_demand.py  test_gateway.py  test_gpu_guard.py  test_gpu_monitor.py  test_integration.py  test_launcher.py  test_metrics_collector.py  test_models.py  test_openai_compat.py  test_queue_purge.py  test_registry.py  test_scheduler.py
(+20 files in other folders)
